--- a/css/styles.less
+++ b/css/styles.less
@@ -1,10 +1,10 @@
 /* real css */
-@blue: rgba(0, 86, 180, 1);
-@dark-blue: #1c1d53;
+@red: #8c1515;
+@dark-red: #590d0d;
 
 a {
     text-decoration: none;
-    color: @blue;
+    color: @red;
 }
 html {
     height: 100%;
@@ -42,7 +42,7 @@ body h2 {
     font-weight: bold;
     margin-top: 1.0em;
     margin-bottom: 0.5em;
-    color: @dark-blue;
+    color: @dark-red;
 
     @media(min-width: 1281px) {
         font-size: 2.3em;
@@ -77,17 +77,17 @@ body b {
 
 .logo {
     .logo-span {
-        width: 100px;
-        height: 100px;
+        width: 80px;
+        height: 80px;
         position: absolute;
-        top: -15px;
+        top: -3px;
 
-        background-image: url("../static/zbt-logo.png");
+        background-image: url("../static/ksa-logo.png");
         background-size: contain;
     }
 
 
-    max-width: 100px;
+    max-width: 80px;
     margin-left: auto;
     margin-right: auto;
 
@@ -162,6 +162,7 @@ body b {
 .background {
     height: 350px;
     background-size: cover;
+    background-position-y: center;
     width: 100%;
     position: relative;
 
@@ -169,12 +170,23 @@ body b {
         font-family: 'PT Sans',sans-serif;
         font-size: 4em;
         font-weight: bold;
+        line-height: 0.7em;
         color: #DDD;
-        padding-top: 2em;
+        padding-top: 3em;
         padding-left: 3em;
+
+        smaller {
+            font-size: 0.5em;
+        }
 
         @media(min-width: 1281px) {
             font-size: 5em;
+        }
+    }
+
+    @media(max-width: 860px) {
+        .caption {
+            padding-left: 0.4em;
         }
     }
 
@@ -184,7 +196,7 @@ body b {
         .caption {
             padding-top: 6em;
             padding-left: 0.3em;
-            font-size: 2.7em;
+            font-size: 2.3em;
         }
     }
 
@@ -206,18 +218,6 @@ body b {
     background-position-y: center;
 }
 
-#events.background {
-    height: 400px;
-}
-
-#brothers.background {
-    background-position-x: center;
-}
-
-#alumni.background {
-    background-position: center;
-}
-
 .call-to-action {
     margin-top: 1em;
     margin-bottom: 1em;
@@ -232,6 +232,7 @@ body b {
     width: 200px;
 
     span {
+        padding: 0.7em;
         font-family: 'PT Sans',sans-serif;
         font-size: 0.3em;
         color: #FFFFFF;
@@ -246,7 +247,7 @@ body b {
     }
 
     span:hover {
-        color: @blue;
+        color: @red;
     }
 }
 
@@ -341,7 +342,7 @@ hr {
     max-width: 200px;
     height: 1px;
     border: 0;
-    background-image: linear-gradient(to right, @blue, rgba(0, 100, 200, 1), @blue);
+    background-image: linear-gradient(to right, @red, @dark-red, @red);
 
     margin-top: 3em;
     margin-bottom: 8em;
@@ -382,12 +383,12 @@ html body footer {
 }
 
 .important {
-    color: @dark-blue;
+    color: @dark-red;
     a {
         white-space: nowrap;
     }
 
-    border: 1px solid @dark-blue;
+    border: 1px solid @dark-red;
     padding: 0.6em;
     border-radius: 3px;
 
@@ -433,7 +434,7 @@ html body footer {
             font-weight: bold;
             padding-top: 2em;
             padding-bottom: 1em;
-            color: @blue;
+            color: @red;
         }
     }
 }
