--- a/css/styles.less
+++ b/css/styles.less
@@ -218,6 +218,10 @@ body b {
     background-position-y: center;
 }
 
+#misti div, #culture-show div {
+    background-position-y: top;
+}
+
 .call-to-action {
     margin-top: 1em;
     margin-bottom: 1em;
@@ -332,12 +336,6 @@ body b {
     }
 }
 
-#gotb .img {
-    @media (max-width: 800px) {
-        background-position-y: 1em;
-    }
-}
-
 hr {
     max-width: 200px;
     height: 1px;
@@ -414,10 +412,6 @@ html body footer {
     }
 }
 
-.rush.flex {
-    flex-direction: row-reverse;
-}
-
 .schedule {
     margin-bottom: 2em;
 
@@ -448,22 +442,6 @@ html body footer {
     padding: 1em;
 }
 
-#commons {
-    min-height: 400px;
-}
-#house-img div {
-    background-position-x: left;
-}
-
-#house-paragraph {
-    margin-top: 0.5em;
-    margin-bottom: 0.5em;
-}
-
-#house-paragraph img {
-    padding: 1em;
-    max-height: 13em;
-}
 
 .class-gallery {
     margin-left: 1em;
