--- a/css/styles.less
+++ b/css/styles.less
@@ -437,79 +437,12 @@ html body footer {
     padding: 1em;
 }
 
-
-.class-gallery {
-    margin-left: 1em;
-    margin-right: 1em;
-    text-align: center;
-
-    @media(max-width: 800px) {
-        margin: 0;
-    }
-
-    h2 {
-        font-family: 'PT Sans';
-        font-weight: bolder;
-        font-size: 3em;
-
-        @media(max-width: 800px) {
-            font-size: 1.5em;
-        }
-    }
-
-    .cards {
-        padding: 2em;
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-around;
-
-        @media(max-width: 800px) {
-            padding: 0 1em;
-        }
-    }
-
-    .brother-card {
-        cursor: pointer;
-        margin: 1em;
-        position: relative;
-
-        img {
-            max-width: 200px;
-            @media(max-width: 800px) {
-                max-width: 100px;
-            }
-        }
-        span {
-            height: 2.5em;
-            line-height: 2.5em;
-            color: #ddd;
-            font-family: 'PT Sans';
-
-            z-index: 25;
-            position: absolute;
-            left: 0;
-            bottom: 0;
-            width: 100%;
-
-            background-color: #222;
-
-            @media(max-width: 800px) {
-                height: 1em;
-                line-height: 1em;
-                font-size: 0.5em;
-            }
-
-            overflow: hidden;
-            text-overflow: ellipsis;
-            white-space: nowrap;
-        }
-    }
-
-    @media(max-width: 800px) {
-        padding-left: 0;
-        padding-right: 0;
-    }
+#pusheen {
+    position: absolute;
+    right: 0;
+    bottom: 40;
 }
+
 
 .skylight-dialog {
     max-height: 400px;
