--- a/css/styles.less
+++ b/css/styles.less
@@ -433,6 +433,17 @@ html body footer {
     }
 }
 
+
+#exec .img.col {
+    max-width: 300px;
+}
+
+#exec {
+    div.flex {
+        flex-direction: row !important;
+    }
+}
+
 .desc {
     padding: 1em;
 }
