--- a/css/styles.less
+++ b/css/styles.less
@@ -200,6 +200,13 @@ body b {
         }
     }
 
+    @media(max-width: 400px) {
+        .caption {
+            padding-top: 8em;
+            font-size: 1.9em;
+        }
+    }
+
     @media(min-width: 1281px) {
         height: 500px;
     }
@@ -444,6 +451,21 @@ html body footer {
 #exec {
     div.flex {
         flex-direction: row !important;
+    }
+
+    h2 {
+        margin-bottom: 0;
+    }
+
+    smaller {
+        color: #888;
+        font-weight: 400;
+        font-size: 1.2em;
+    }
+    p {
+        margin-top: 1em;
+        font-size: 0.7em;
+        line-height: 1.0em;
     }
 }
 
