--- a/css/styles.less
+++ b/css/styles.less
@@ -479,6 +479,16 @@ html body footer {
     bottom: 40;
 }
 
+#studypool {
+    margin: 1em;
+    max-width: 250px;
+    img {
+        max-width: 170px;
+        padding: 10px;
+    }
+    text-align: center;
+}
+
 
 .skylight-dialog {
     max-height: 400px;
